src/test/ui/generator/yield-in-args.stderr
error[E0626]: borrow may still be in use when generator yields
  --> $DIR/yield-in-args.rs:18:14
   |
18 |         foo(&b, yield); //~ ERROR
   |              ^  ----- possible yield occurs here

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0626"
